	    upon the last output note (1 step of latency)
	  o The scheduled notes took into account the note buffer state at 
	    the step before (1 step of latency).
	Both delays are now squeezed. 1) Notes are scheduled only 8 alsa ticks
	before they go out. 2) The note buffer state is taken into account
	at the time they are scheduled. The arp is now playable live without 
	hicks.

2010-02-16  Frank Kober  <goemusic@yahoo.fr>
	* midilfo.cpp: fixed data storage inconsistency

2010-02-15  Frank Kober  <goemusic@yahoo.fr>
	* midilfo.*: hi-res drawing interpolation slightly improved

2010-02-14  Frank Kober  <goemusic@yahoo.fr>
	* lfowidget.*, midilfo.*, seqwidget.*, midiseq.*: muting ranges 
	by holding right mouse button now possible.
	* passwidget.cpp, midicctable.cpp: Layout improved
	* man/*/qmidiarp.1: Midiclock description updated

2010-02-13 Frank Kober <goemusic@yahoo.fr>
	* passwidget.*, mainwindow.cpp, seqdriver.*: false midiclock tpqn 
	editing removed since it has a clear standard definition.
	* mainwindow.*, passwidget.*: passWidget (Settings) is now a dialog
	window, compact style no longer default, compact style applies 
	immediately when checkbox toggled, but applies to widget
	spacings only for modules added after change.
	* seqdriver.h, lfowidget.cpp: cleanups
	* mainwindow.*, midicctable.cpp: fixed memory leak when opening
	midi control editor
	* pixmaps/jacktr.xpm: icon polished
	
2010-02-09 Frank Kober <goemusic@yahoo.fr>
	* midilfo.*, seqdriver.cpp, main.h: frame size for each LFO data
	queueing at a time limited to 256 points to fix playout of
	high resolution and length LFO waveforms.
    
2010-02-08 Frank Kober <goemusic@yahoo.fr>
	* midilfo.*, lfowidget.cpp: Drawing improved to avoid skipping
	points for custom waveforms with higher resolution than mouse 
	resolution (reported by David Adler)
	* lfoscreen.cpp: Drawing behavior on edges made easier
	
2010-02-06 Frank Kober <goemusic@yahoo.fr>
	* man/*/qmidiarp.1: manpages updated.
	